--- a/about.html
+++ b/about.html
@@ -204,6 +204,9 @@
               <div class="col-md-4 mb-4">
 
                 <div class="w-200 mx-auto mb-4">
+                  <img src="https://mdbootstrap.com/img/Photos/Avatars/img%20(2).jpg" class="img-fluid rounded mx-auto" alt="smaple image">
+                </div>
+                <div class="w-40 mx-auto mb-4">
                   <img src="https://mdbootstrap.com/img/Photos/Avatars/img%20(2).jpg" class="img-fluid rounded-circle mx-auto" alt="smaple image">
                 </div>
                 <h6 class="font-weight-bold">Alicia Deyns</h6>
@@ -221,7 +224,7 @@
               <!-- Grid column -->
               <div class="col-md-4 mb-4">
 
-                <div class="w-200 mx-auto">
+                <div class="w-200 mx-auto mb-4">
                   <img src="https://mdbootstrap.com/img/Photos/Avatars/img%20(3).jpg" class="img-fluid rounded-circle mx-auto" alt="smaple image">
                 </div>
                 <h6 class="font-weight-bold">Tommy Brian</h6>
