--- a/about.html
+++ b/about.html
@@ -204,23 +204,26 @@
               <div class="col-md-4 mb-4">
 
                 <div class="mx-auto">
-                  <img src="/img/team/german-perez.jpg" class="img-fluid rounded mx-auto" alt="german-perez">
+                  <img src="/img/team/german-perez.jpg" class="img-fluid rounded mx-auto" alt="photo-g">
                 </div>
                 <div class="mini-avatar mx-auto">
                   <img src="https://mdbootstrap.com/img/Photos/Avatars/img%20(2).jpg" class="img-fluid rounded-circle mx-auto" alt="smaple image">
                 </div>
-                <h6 class="font-weight-bold">German Pérez</h6>
-                <small class="text-muted">SouFUN Co-funder</small>
-                <p class="mt-3 text-muted w-responsive">Passionate about languages ​​and also
-                  programming languages. My strengths are
-                  Unity, Blender and Substance Painter, java
-                  and python. Programming is an art in which
-                  the limit is your imagination.</p>
-                <ul class="list-unstyled d-flex justify-content-center mt-3 mb-0 red-text">
-                  <li><i class="fab fa-twitter mx-2"></i></li>
-                  <li><i class="fab fa-facebook-f mx-2"></i></li>
-                  <li><i class="fab fa-instagram mx-2"></i></li>
-                </ul>
+                <div class="text-center px-2">
+                  <h6 class="font-weight-bold">Tommy Brian</h6>
+                  <small class="text-muted">Co-funder & CTO</small>
+                  <p class="mt-3 text-muted">Passionate about languages ​​and also
+                    programming languages. My strengths are
+                    Unity, Blender and Substance Painter, java
+                    and python. Programming is an art in which
+                    the limit is your imagination.</p>
+                  <ul class="list-unstyled d-flex justify-content-center mt-3 mb-0 red-text">
+                    <li><i class="fab fa-twitter mx-2"></i></li>
+                    <li><i class="fab fa-facebook-f mx-2"></i></li>
+                    <li><i class="fab fa-instagram mx-2"></i></li>
+                  </ul>
+                </div>
+
               </div>
               <!-- Grid column -->
 
