--- a/about.html
+++ b/about.html
@@ -213,11 +213,14 @@
                     Unity, Blender and Substance Painter, java
                     and python. Programming is an art in which
                     the limit is your imagination.</p>
-                  <ul class="list-unstyled d-flex justify-content-center mt-3 mb-0 red-text">
-                    <li><i class="fab fa-twitter mx-2"></i></li>
-                    <li><i class="fab fa-facebook-f mx-2"></i></li>
-                    <li><i class="fab fa-instagram mx-2"></i></li>
-                  </ul>
+                  <div class="social-icon">
+                    <ul class="list-unstyled d-flex justify-content-center mt-3 mb-0 dark-text">
+                      <li><a href="https://twitter.com/kodokushinku" target="_blank"><i class="fab fa-twitter mx-2"></i></a></li>
+                      <li><a href="https://www.facebook.com/gerdav2926?ref=bookmarks" target="_blank"><i class="fab fa-facebook-f mx-2"></i></a></li>
+                      <li><a href="https://www.instagram.com/ger_dav/" target="_blank"><i class="fab fa-instagram mx-2"></i></a></li>
+                      <li><a href="https://github.com/Kodoku-Shinku" target="_blank"><i class="fab fa-github mx-2"></i></a></li>
+                    </ul>
+                  </div>
                 </div>
 
               </div>
@@ -313,10 +316,10 @@
                   <p class="mt-3 text-muted">Sed ut perspiciatis unde omnis natus accusantium.</p>
                   <div class="hoverable-icon">
                     <ul class="list-unstyled d-flex justify-content-center mt-3 mb-0 dark-text">
-                      <li><a href="https://twitter.com/kodokushinku"><i class="fab fa-twitter mx-2"></i></a></li>
-                      <li><a href="https://www.facebook.com/gerdav2926?ref=bookmarks"><i class="fab fa-facebook-f mx-2"></i></a></li>
-                      <li><a href="https://www.instagram.com/ger_dav/"><i class="fab fa-instagram mx-2"></i></a></li>
-                      <li><a href="https://github.com/Kodoku-Shinku"><i class="fab fa-github mx-2"></i></a></li>
+                      <li><a href="https://twitter.com/kodokushinku" target="_blank"><i class="fab fa-twitter mx-2"></i></a></li>
+                      <li><a href="https://www.facebook.com/gerdav2926?ref=bookmarks" target="_blank"><i class="fab fa-facebook-f mx-2"></i></a></li>
+                      <li><a href="https://www.instagram.com/ger_dav/" target="_blank"><i class="fab fa-instagram mx-2"></i></a></li>
+                      <li><a href="https://github.com/Kodoku-Shinku" target="_blank"><i class="fab fa-github mx-2"></i></a></li>
                     </ul>
                   </div>
                 </div>
