--- a/about.html
+++ b/about.html
@@ -213,14 +213,12 @@
                     Unity, Blender and Substance Painter, java
                     and python. Programming is an art in which
                     the limit is your imagination.</p>
-                  <div class="social-icon">
-                    <ul class="list-unstyled d-flex justify-content-center mt-3 mb-0 dark-text">
-                      <li><a href="https://twitter.com/kodokushinku" target="_blank"><i class="fab fa-twitter mx-2"></i></a></li>
-                      <li><a href="https://www.facebook.com/gerdav2926?ref=bookmarks" target="_blank"><i class="fab fa-facebook-f mx-2"></i></a></li>
-                      <li><a href="https://www.instagram.com/ger_dav/" target="_blank"><i class="fab fa-instagram mx-2"></i></a></li>
-                      <li><a href="https://github.com/Kodoku-Shinku" target="_blank"><i class="fab fa-github mx-2"></i></a></li>
-                    </ul>
-                  </div>
+                  <ul class="list-unstyled social-icon d-flex justify-content-center mt-3 mb-0 dark-text">
+                    <li><a href="https://twitter.com/kodokushinku" target="_blank"><i class="fab fa-twitter mx-2"></i></a></li>
+                    <li><a href="https://www.facebook.com/gerdav2926?ref=bookmarks" target="_blank"><i class="fab fa-facebook-f mx-2"></i></a></li>
+                    <li><a href="https://www.instagram.com/ger_dav/" target="_blank"><i class="fab fa-instagram mx-2"></i></a></li>
+                    <li><a href="https://github.com/Kodoku-Shinku" target="_blank"><i class="fab fa-github mx-2"></i></a></li>
+                  </ul>
                 </div>
 
               </div>
