--- a/about.html
+++ b/about.html
@@ -203,7 +203,89 @@
                   <img src="/img/team/german-perez.jpg" class="img-fluid rounded mx-auto" alt="photo-g">
                 </div>
                 <div class="mini-avatar mx-auto">
-                  <img src="https://mdbootstrap.com/img/Photos/Avatars/img%20(2).jpg" class="img-fluid rounded-circle mx-auto" alt="smaple image">
+                  <img src="/img/brand/soufun-solid-logo.png" class="img-fluid rounded-circle mx-auto" alt="smaple image">
+                </div>
+                <div class="text-center px-2">
+                  <h6 class="font-weight-bold">German Perez</h6>
+                  <small class="text-muted">SouFUN Co-funder</small>
+                  <p class="mt-3 text-muted">Passionate about languages ​​and also
+                    programming languages. My strengths are
+                    Unity, Blender and Substance Painter, java
+                    and python. Programming is an art in which
+                    the limit is your imagination.</p>
+                  <ul class="list-unstyled d-flex justify-content-center mt-3 mb-0 cyan-text">
+                    <li><a href="https://twitter.com/kodokushinku" target="_blank"><i class="fab fa-twitter mx-2"></i></a></li>
+                    <li><a href="https://www.facebook.com/gerdav2926?ref=bookmarks" target="_blank"><i class="fab fa-facebook-f mx-2"></i></a></li>
+                    <li><a href="https://www.instagram.com/ger_dav/" target="_blank"><i class="fab fa-instagram mx-2"></i></a></li>
+                    <li><a href="https://github.com/Kodoku-Shinku" target="_blank"><i class="fab fa-github mx-2"></i></a></li>
+                  </ul>
+                </div>
+
+              </div>
+              <!-- Grid column -->
+
+              <!-- Grid column -->
+              <div class="col-md-4 mb-4">
+
+                <div class="mx-auto">
+                  <img src="/img/team/roberto-torres.jpg" class="img-fluid rounded mx-auto" alt="smaple image">
+                </div>
+                <div class="mini-avatar mx-auto">
+                  <img src="/img/brand/soufun-solid-logo.png" class="img-fluid rounded-circle mx-auto" alt="smaple image">
+                </div>
+                <div class="text-center px-2">
+                  <h6 class="font-weight-bold">Tommy Brian</h6>
+                  <small class="text-muted">Co-funder & CTO</small>
+                  <p class="mt-3 text-muted">Passionate about languages ​​and also
+                    programming languages. My strengths are
+                    Unity, Blender and Substance Painter, java
+                    and python. Programming is an art in which
+                    the limit is your imagination.</p>
+                  <ul class="list-unstyled d-flex justify-content-center mt-3 mb-0 red-text">
+                    <li><i class="fab fa-twitter mx-2"></i></li>
+                    <li><i class="fab fa-facebook-f mx-2"></i></li>
+                    <li><i class="fab fa-instagram mx-2"></i></li>
+                  </ul>
+                </div>
+
+              </div>
+              <!-- Grid column -->
+
+              <!-- Grid column -->
+              <div class="col-md-4 mb-4">
+
+                <div class="mx-auto">
+                  <img src="/img/team/eli-roots.png" class="img-fluid rounded mx-auto" alt="smaple image">
+                </div>
+                <div class="mini-avatar mx-auto">
+                  <img src="/img/brand/soufun-solid-logo.png" class="img-fluid rounded-circle mx-auto" alt="smaple image">
+                </div>
+                <div class="text-center px-2">
+                  <h6 class="font-weight-bold">Kate Witson</h6>
+                  <small class="text-muted">Lead Developer</small>
+                  <p class="mt-3 text-muted">Sed ut perspiciatis unde omnis natus accusantium.</p>
+                  <ul class="list-unstyled d-flex justify-content-center mt-3 mb-0 red-text">
+                    <li><i class="fab fa-twitter mx-2"></i></li>
+                    <li><i class="fab fa-facebook-f mx-2"></i></li>
+                    <li><i class="fab fa-instagram mx-2"></i></li>
+                  </ul>
+                </div>
+              </div>
+              <!-- Grid column -->
+            </div>
+            <!-- Grid row -->
+
+            <!-- Grid row -->
+            <div class="row text-center dark-grey-text my-5">
+
+              <!-- Grid column -->
+              <div class="col-md-4 mb-4">
+
+                <div class="mx-auto">
+                  <img src="/img/team/keyla-avila.jpg" class="img-fluid rounded mx-auto" alt="photo-g">
+                </div>
+                <div class="mini-avatar mx-auto">
+                  <img src="/img/brand/soufun-solid-logo.png" class="img-fluid rounded-circle mx-auto" alt="smaple image">
                 </div>
                 <div class="text-center px-2">
                   <h6 class="font-weight-bold">German Perez</h6>
@@ -228,10 +310,10 @@
               <div class="col-md-4 mb-4">
 
                 <div class="mx-auto">
-                  <img src="https://mdbootstrap.com/img/Photos/Avatars/img%20(3).jpg" class="img-fluid rounded mx-auto" alt="smaple image">
+                  <img src="/img/team/victor-sarabia.jpg" class="img-fluid rounded mx-auto" alt="smaple image">
                 </div>
                 <div class="mini-avatar mx-auto">
-                  <img src="https://mdbootstrap.com/img/Photos/Avatars/img%20(2).jpg" class="img-fluid rounded-circle mx-auto" alt="smaple image">
+                  <img src="/img/brand/soufun-solid-logo.png" class="img-fluid rounded-circle mx-auto" alt="smaple image">
                 </div>
                 <div class="text-center px-2">
                   <h6 class="font-weight-bold">Tommy Brian</h6>
@@ -258,7 +340,7 @@
                   <img src="https://mdbootstrap.com/img/Photos/Avatars/img%20(4).jpg" class="img-fluid rounded mx-auto" alt="smaple image">
                 </div>
                 <div class="mini-avatar mx-auto">
-                  <img src="https://mdbootstrap.com/img/Photos/Avatars/img%20(2).jpg" class="img-fluid rounded-circle mx-auto" alt="smaple image">
+                  <img src="/img/brand/soufun-solid-logo.png" class="img-fluid rounded-circle mx-auto" alt="smaple image">
                 </div>
                 <div class="text-center px-2">
                   <h6 class="font-weight-bold">Kate Witson</h6>
@@ -275,78 +357,7 @@
             </div>
             <!-- Grid row -->
 
-            <!-- Grid row -->
-            <div class="row text-center dark-grey-text my-5 px-5">
-              <!-- Grid column -->
-              <div class="col-md-4 mb-4">
 
-                <div class="mx-auto">
-                  <img src="https://mdbootstrap.com/img/Photos/Avatars/img%20(7).jpg" class="img-fluid rounded mx-auto" alt="smaple image">
-                </div>
-                <div class="mini-avatar mx-auto">
-                  <img src="https://mdbootstrap.com/img/Photos/Avatars/img%20(2).jpg" class="img-fluid rounded-circle mx-auto" alt="smaple image">
-                </div>
-                <div class="text-center px-2">
-                  <h6 class="font-weight-bold">Barbara Lenny</h6>
-                  <small class="text-muted">Designer</small>
-                  <p class="mt-3 text-muted">Sed ut perspiciatis unde omnis natus accusantium.</p>
-                  <ul class="list-unstyled d-flex justify-content-center mt-3 mb-0 red-text">
-                    <li><i class="fab fa-twitter mx-2"></i></li>
-                    <li><i class="fab fa-facebook-f mx-2"></i></li>
-                    <li><i class="fab fa-instagram mx-2"></i></li>
-                  </ul>
-                </div>
-              </div>
-              <!-- Grid column -->
-
-              <!-- Grid column -->
-              <div class="col-md-4 mb-4">
-
-                <div class="mx-auto">
-                  <img src="https://mdbootstrap.com/img/Photos/Avatars/img%20(8).jpg" class="img-fluid rounded mx-auto" alt="smaple image">
-                </div>
-                <div class="mini-avatar mx-auto">
-                  <img src="https://mdbootstrap.com/img/Photos/Avatars/img%20(2).jpg" class="img-fluid rounded-circle mx-auto" alt="smaple image">
-                </div>
-                <div class="text-center px-2">
-                  <h6 class="font-weight-bold">Barbara Lenny</h6>
-                  <small class="text-muted">Designer</small>
-                  <p class="mt-3 text-muted">Sed ut perspiciatis unde omnis natus accusantium.</p>
-                  <div class="hoverable-icon">
-                    <ul class="list-unstyled d-flex justify-content-center mt-3 mb-0 dark-text">
-                      <li><a href="https://twitter.com/kodokushinku" target="_blank"><i class="fab fa-twitter mx-2"></i></a></li>
-                      <li><a href="https://www.facebook.com/gerdav2926?ref=bookmarks" target="_blank"><i class="fab fa-facebook-f mx-2"></i></a></li>
-                      <li><a href="https://www.instagram.com/ger_dav/" target="_blank"><i class="fab fa-instagram mx-2"></i></a></li>
-                      <li><a href="https://github.com/Kodoku-Shinku" target="_blank"><i class="fab fa-github mx-2"></i></a></li>
-                    </ul>
-                  </div>
-                </div>
-              </div>
-              <!-- Grid column -->
-
-              <!-- Grid column -->
-              <div class="col-md-4 mb-4">
-
-                <div class="mx-auto">
-                  <img src="https://mdbootstrap.com/img/Photos/Avatars/img%20(30).jpg" class="img-fluid rounded mx-auto" alt="smaple image">
-                </div>
-                <div class="mini-avatar mx-auto">
-                  <img src="https://mdbootstrap.com/img/Photos/Avatars/img%20(2).jpg" class="img-fluid rounded-circle mx-auto" alt="smaple image">
-                </div>
-                <div class="text-center px-2">
-                  <h6 class="font-weight-bold">Barbara Lenny</h6>
-                  <small class="text-muted">Designer</small>
-                  <p class="mt-3 text-muted">Sed ut perspiciatis unde omnis natus accusantium.</p>
-                  <ul class="list-unstyled d-flex justify-content-center mt-3 mb-0 red-text">
-                    <li><i class="fab fa-twitter mx-2"></i></li>
-                    <li><i class="fab fa-facebook-f mx-2"></i></li>
-                    <li><i class="fab fa-instagram mx-2"></i></li>
-                  </ul>
-                </div>
-              </div>
-              <!-- Grid column -->
-            </div>
-            <!-- Grid row -->
           </div>
           <!--Card-->
         </section>
