--- a/about.html
+++ b/about.html
@@ -452,19 +452,20 @@
                     <div class="face-front">
                       <!-- Image -->
                       <div class="card-up mx-auto">
-                        <img class="card-img-top img-fluid mx-auto" src="/img/team/back.jpg" alt="Team member card image">
+                        <img class="img-fluid mx-auto" src="/img/team/back.jpg" alt="Team member card image">
                       </div>
                       <!-- Avatar -->
                       <div class="mini-avatar mx-auto">
-                        <img src="https://mdbootstrap.com/img/Photos/Avatars/img(20).jpg" class="rounded-circle" alt="Second sample avatar image">
+                        <img src="/img/team/roberto-torres.jpg" class="rounded-circle img-fluid" alt="photo-rob">
                       </div>
                       <!-- Content -->
-                      <div class="card-body">
-                        <h4 class="font-weight-bold mt-1 mb-3">Anna Deynah</h4>
-                        <p class="font-weight-bold dark-grey-text">Web Designer</p>
+                      <div class="card-body pt-0">
+                        <h4 class="font-weight-bold mt-1 mb-3">Roberto Torres</h4>
+                        <h6 class="font-weight-bold dark-grey-text">SouFUN Co-Founder</h6>
+                        <p><small class="text-muted">Unity developer</small></p>
                         <!-- Triggering button -->
-                        <a class="rotate-btn-to-back grey-text" data-card="card-2">
-                          <i class="fas fa-redo-alt grey-text"></i> Click here to rotate</a>
+                        <a class="rotate-btn-to-back grey-text" data-card="card-1">
+                          <i class="fas fa-redo-alt grey-text mr-2"></i>More Info</a>
                       </div>
                     </div>
                     <!-- Front Side -->
@@ -477,37 +478,36 @@
                           <strong>About me</strong>
                         </h4>
                         <hr>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maxime quae, dolores dicta.
-                          Blanditiis rem amet repellat, dolores nihil quae in mollitia asperiores ut rerum repellendus,
-                          voluptatum eum, officia laudantium quaerat?
+                        <p>Game Developer, program whatever it takes to create
+                          amazing things. I'm good at Unity 3D, Java, Python.
                         </p>
                         <hr>
                         <!-- Social Icons -->
-                        <ul class="list-inline list-unstyled">
+                        <ul class="list-inline list-unstyled social-icon text-white">
                           <li class="list-inline-item">
-                            <a class="p-2 fa-lg fb-ic">
+                            <a href="https://www.facebook.com/robtj090" target="_blank" class="p-2 fa-lg fb-ic text-reset">
                               <i class="fab fa-facebook-f"></i>
                             </a>
                           </li>
                           <li class="list-inline-item">
-                            <a class="p-2 fa-lg pin-ic">
-                              <i class="fab fa-pinterest"> </i>
-                            </a>
-                          </li>
-                          <li class="list-inline-item">
-                            <a class="p-2 fa-lg ins-ic">
+                            <a href="https://www.instagram.com/rob_tj090/" target="_blank" class="p-2 fa-lg ins-ic text-reset">
                               <i class="fab fa-instagram"> </i>
                             </a>
                           </li>
                           <li class="list-inline-item">
-                            <a class="p-2 fa-lg tw-ic">
+                            <a href="https://twitter.com/rob_tj090" target="_blank" class="p-2 fa-lg tw-ic text-reset">
                               <i class="fab fa-twitter"> </i>
+                            </a>
+                          </li>
+                          <li class="list-inline-item">
+                            <a href="https://github.com/RobertoTorresJim" target="_blank" class="p-2 fa-lg git-ic text-reset">
+                              <i class="fab fa-github"> </i>
                             </a>
                           </li>
                         </ul>
                         <!-- Triggering button -->
-                        <a class="rotate-btn-to-front grey-text" data-card="card-2">
-                          <i class="fas fa-redo-alt grey-text"></i> Click here to rotate back</a>
+                        <a class="rotate-btn-to-front text-white" data-card="card-2">
+                          <i class="fas fa-redo-alt text-white mr-2"></i>Main Info</a>
                       </div>
                     </div>
                     <!-- Back Side -->
@@ -526,19 +526,20 @@
                     <div class="face-front">
                       <!-- Image -->
                       <div class="card-up mx-auto">
-                        <img class="card-img-top img-fluid mx-auto" src="https://mdbootstrap.com/img/Photos/Horizontal/Nature/4-col/img%20(14).jpg" alt="Team member card image">
+                        <img class="img-fluid mx-auto" src="/img/team/back.jpg" alt="Team member card image">
                       </div>
                       <!-- Avatar -->
                       <div class="mini-avatar mx-auto">
-                        <img src="https://mdbootstrap.com/img/Photos/Avatars/img(8).jpg" class="rounded-circle img-fluid" alt="Third sample avatar image">
+                        <img src="/img/team/eli-roots.jpg" class="rounded-circle img-fluid" alt="photo-eli">
                       </div>
                       <!-- Content -->
-                      <div class="card-body">
-                        <h4 class="font-weight-bold mt-1 mb-3">John Doe</h4>
-                        <p class="font-weight-bold dark-grey-text">Front-end Developer</p>
+                      <div class="card-body pt-0">
+                        <h4 class="font-weight-bold mt-1 mb-3">Elizabeth Librado</h4>
+                        <h6 class="font-weight-bold dark-grey-text">SouFUN Co-Founder</h6>
+                        <p><small class="text-muted">Graphic Designer</small></p>
                         <!-- Triggering button -->
-                        <a class="rotate-btn-to-back grey-text" data-card="card-3">
-                          <i class="fas fa-redo-alt grey-text"></i> Click here to rotate</a>
+                        <a class="rotate-btn-to-back grey-text" data-card="card-1">
+                          <i class="fas fa-redo-alt grey-text mr-2"></i>More Info</a>
                       </div>
                     </div>
                     <!-- Front Side -->
@@ -551,54 +552,163 @@
                           <strong>About me</strong>
                         </h4>
                         <hr>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maxime quae, dolores dicta.
-                          Blanditiis rem amet repellat, dolores nihil quae in mollitia asperiores ut rerum repellendus,
-                          voluptatum eum, officia laudantium quaerat?
+                        <p>My favorite programs are Photoshop, 2D Tupi, Paintool Sai and After Effects.
+                          I love Kirby and Crash animation and games, love reading science fiction and i am in love
+                          with music in vinyl format.
                         </p>
                         <hr>
                         <!-- Social Icons -->
-                        <ul class="list-inline list-unstyled">
+                        <ul class="list-inline list-unstyled social-icon text-white">
                           <li class="list-inline-item">
-                            <a class="p-2 fa-lg fb-ic">
-                              <i class="fab fa-facebook-f"></i>
+                            <a href="https://www.instagram.com/ellisroots/" target="_blank" class="p-2 fa-lg ins-ic text-reset">
+                              <i class="fab fa-instagram mr-2">elisroots</i>
                             </a>
                           </li>
                           <li class="list-inline-item">
-                            <a class="p-2 fa-lg pin-ic">
-                              <i class="fab fa-pinterest"> </i>
-                            </a>
-                          </li>
-                          <li class="list-inline-item">
-                            <a class="p-2 fa-lg ins-ic">
-                              <i class="fab fa-instagram"> </i>
-                            </a>
-                          </li>
-                          <li class="list-inline-item">
-                            <a class="p-2 fa-lg tw-ic">
-                              <i class="fab fa-twitter"> </i>
+                            <a href="https://www.instagram.com/ilaxolotl/" target="_blank" class="p-2 fa-lg ins-ic text-reset">
+                              <i class="fab fa-instagram mr-2">ilaxolotl</i>
                             </a>
                           </li>
                         </ul>
                         <!-- Triggering button -->
-                        <a class="rotate-btn-to-front grey-text" data-card="card-3">
-                          <i class="fas fa-redo-alt grey-text"></i> Click here to rotate back</a>
+                        <a class="rotate-btn-to-front text-white" data-card="card-3">
+                          <i class="fas fa-redo-alt text-white mr-2"></i>Main Info</a>
                       </div>
                     </div>
                     <!-- Back Side -->
+                  </div>
+                </div>
+                <!-- Rotating card -->
+              </div>
+              <!-- Grid column -->
+            </div>
+            <!-- Grid row -->
 
+            <!-- Grid row -->
+            <div class="row d-flex justify-content-center">
+              <!-- Grid column -->
+              <div class="col-md-4 mb-4">
+                <!-- Rotating card -->
+                <div class="card-wrapper">
+                  <div id="card-4" class="card card-rotating text-center">
+                    <!-- Front Side -->
+                    <div class="face-front">
+                      <!-- Image -->
+                      <div class="card-up mx-auto">
+                        <img class="img-fluid mx-auto" src="/img/team/back.jpg" alt="Team member card image">
+                      </div>
+                      <!-- Avatar -->
+                      <div class="mini-avatar mx-auto">
+                        <img src="/img/team/keyla-avila.jpg" class="rounded-circle img-fluid" alt="photo-key">
+                      </div>
+                      <!-- Content -->
+                      <div class="card-body pt-0">
+                        <h4 class="font-weight-bold mt-1 mb-3">Keyla Ávila</h4>
+                        <h6 class="font-weight-bold dark-grey-text">SouFUN Artist</h6>
+                        <p><small class="text-muted">SouFUN Graphic Designer and Illustrator</small></p>
+                        <!-- Triggering button -->
+                        <a class="rotate-btn-to-back grey-text" data-card="card-4">
+                          <i class="fas fa-redo-alt grey-text mr-2"></i>More Info</a>
+                      </div>
+                    </div>
+                    <!-- Front Side -->
+                    <!-- Back Side -->
+                    <div class="face-back">
+                      <!-- Content -->
+                      <div class="card-body">
+                        <!-- Content -->
+                        <h4 class="font-weight-bold mt-4 mb-2">
+                          <strong>About me</strong>
+                        </h4>
+                        <hr>
+                        <p>I like to give Photoshop, Illustrator, InDesign, Blender,
+                          Krita and CCS. Fascinated by Art Concept, always willing to learn.
+                        </p>
+                        <hr>
+                        <!-- Social Icons -->
+                        <ul class="list-inline list-unstyled social-icon text-white">
+                          <li class="list-inline-item">
+                            <a href="https://www.instagram.com/pildoritakey/" target="_blank" class="p-2 fa-lg ins-ic text-reset">
+                              <i class="fab fa-instagram mr-2">elisroots</i>
+                            </a>
+                          </li>
+                        </ul>
+                        <!-- Triggering button -->
+                        <a class="rotate-btn-to-front text-white" data-card="card-1">
+                          <i class="fas fa-redo-alt text-white mr-2"></i>Main Info</a>
+                      </div>
+                    </div>
+                    <!-- Back Side -->
                   </div>
                 </div>
                 <!-- Rotating card -->
               </div>
               <!-- Grid column -->
 
+              <!-- Grid column -->
+              <div class="col-md-4 mb-4">
+                <!-- Rotating card -->
+                <div class="card-wrapper">
+                  <div id="card-5" class="card card-rotating text-center">
+                    <!-- Front Side -->
+                    <div class="face-front">
+                      <!-- Image -->
+                      <div class="card-up mx-auto">
+                        <img class="img-fluid mx-auto" src="/img/team/back.jpg" alt="Team member card image">
+                      </div>
+                      <!-- Avatar -->
+                      <div class="mini-avatar mx-auto">
+                        <img src="/img/team/victor-sarabia.jpg" class="rounded-circle img-fluid" alt="photo-vic">
+                      </div>
+                      <!-- Content -->
+                      <div class="card-body pt-0">
+                        <h4 class="font-weight-bold mt-1 mb-3">Victor Sarabia</h4>
+                        <h6 class="font-weight-bold dark-grey-text">SouFUN Artist</h6>
+                        <p><small class="text-muted">Multimedia Designer</small></p>
+                        <!-- Triggering button -->
+                        <a class="rotate-btn-to-back grey-text" data-card="card-5">
+                          <i class="fas fa-redo-alt grey-text mr-2"></i>More Info</a>
+                      </div>
+                    </div>
+                    <!-- Front Side -->
+                    <!-- Back Side -->
+                    <div class="face-back">
+                      <!-- Content -->
+                      <div class="card-body">
+                        <!-- Content -->
+                        <h4 class="font-weight-bold mt-4 mb-2">
+                          <strong>About me</strong>
+                        </h4>
+                        <hr>
+                        <p>I move better in Photoshop, Illustrator and After Effects.
+                          My specialty is Photo Editing. Lover of the universe, I enjoy sports, nature,
+                          books and waste hours playing a good shooter.
+                        </p>
+                        <hr>
+                        <!-- Social Icons -->
+                        <ul class="list-inline list-unstyled social-icon text-white">
+                          <li class="list-inline-item">
+                            <a href="https://www.instagram.com/sarabia_design/" target="_blank" class="p-2 fa-lg ins-ic text-reset">
+                              <i class="fab fa-instagram mr-2"></i>
+                            </a>
+                          </li>
+                        </ul>
+                        <!-- Triggering button -->
+                        <a class="rotate-btn-to-front text-white" data-card="card-5">
+                          <i class="fas fa-redo-alt text-white mr-2"></i>Main Info</a>
+                      </div>
+                    </div>
+                    <!-- Back Side -->
+                  </div>
+                </div>
+                <!-- Rotating card -->
+              </div>
+              <!-- Grid column -->
             </div>
             <!-- Grid row -->
 
           </section>
           <!--Section: Content-->
-
-
         </div>
 
 
